# web-print

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  build.sh  docker-compose.yml  docker-entrypoint.sh  list.py  pyproject.toml
python/src/web_print/: web.py
python/src/web_print/templates/: upload.html
src/web_print/: printers.py  web.py
src/web_print/templates/: upload.html
templates/: upload.html
